# qualk

./: .gitignore  README.md  pyproject.toml
back/: .gitignore  README.md  client_secret_30738102224-lbavud6uvf1bessi5a910gufpdjho0b0.apps.googleusercontent.com.json  main.py  requirements.txt  test.py  test_hash.py  test_jwt.py  test_login.py  test_smtp.py  token.json
back/app/: main.py
back/app/common/: config.py
back/app/database/: conn.py  mysql.py  query.py  redis.py
back/app/entitiy/: login.py  quiz.py  test.py
back/app/logic/: quiz_logic.py  test_logic.py
back/app/model/: model_login.py  model_quiz.py  model_singup.py  model_test.py
back/app/route/: question.py
back/app/test/: test.py
back/app/utils/: .smtp.py.swp  auth.py  auth_smtp.py  input_quiz.py  smtp.py  token.json
back/input_data/: input_data.py  qualk_en.csv  test1.csv
back/static/form/: access_email_form.html  email.html  refresh_password.html
back/static/images/: message(1).txt
back/test/: test.py  test_main.py  test_random_number.py  test_sha256.py  test_smtp.py  token.json
back/test/model/: model_auth.py
back/test/router/: test_found.py
back/test/utils/: auth.py
qualk-front/: README.md  declaration.d.ts  package-lock.json  package.json  tsconfig.json
qualk-front/public/: index.html  initialize.css  manifest.json  robots.txt  sitemap.xml
qualk-front/src/: App.tsx  index.tsx
qualk-front/src/hook/: useAuth.ts  useInterval.js  useQuizTest.ts  useRedirect.ts  useSeachKeyword.ts  useTheme.ts  useTransLanguageQuizData.ts  useWorkbookData.ts
qualk-front/src/javascripts/: correctComment.ts  termData.ts  (+4 more)
(+199 files in other folders)
