[tool.poetry]
name = "qualk"
version = "0.1.0"
description = "qualk 패키지 설치 파일 init"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"
pymysql = "^1.0.2"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
update = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
