[tool.poetry]
name = "qualk"
version = "0.1.0"
description = "qualk 패키지 설치 파일 init"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.9"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"
pymysql = "^1.0.2"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
update = "^0.0.1"
seaborn = "^0.12.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jwt = "^1.3.1"
redis = "^4.6.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
google-api-python-client = "^2.97.0"
google-auth-oauthlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
